--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,8 +2,8 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-icon name="person-add"></ion-icon>
+      <ion-label>Cadastro</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
@@ -12,8 +12,8 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+      <ion-icon name="people"></ion-icon>
+      <ion-label>Lista</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
