--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,17 +1,12 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="cadastro">
       <ion-icon name="person-add"></ion-icon>
       <ion-label>Cadastro</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="lista">
       <ion-icon name="people"></ion-icon>
       <ion-label>Lista</ion-label>
     </ion-tab-button>
